{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 570,
  "lineage": "ae5b3680-a4d4-2014-802b-cc29e98a4323",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04ae51f32a4c53964",
            "domain": "vpc",
            "id": "eipalloc-3a46f237",
            "instance": "i-0873f2ddb8aaa217d",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-045f189828ceb472a",
            "private_dns": "ip-192-168-0-240.eu-central-1.compute.internal",
            "private_ip": "192.168.0.240",
            "public_dns": "ec2-3-70-84-236.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.84.236",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Main eip 1"
            },
            "tags_all": {
              "Name": "Main eip 1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "data.aws_availability_zones.available",
            "aws_iam_instance_profile.ec3_profile",
            "aws_iam_role.s3_role",
            "aws_instance.webserver",
            "aws_key_pair.generated_key",
            "aws_security_group.sg_allow_ssh",
            "aws_security_group.sg_allow_web",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "tls_private_key.RSA"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04855543ad17e1c81",
            "domain": "vpc",
            "id": "eipalloc-a747f3aa",
            "instance": "i-0f54c72572370b527",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-01e8c00c67c981e5b",
            "private_dns": "ip-192-168-1-251.eu-central-1.compute.internal",
            "private_ip": "192.168.1.251",
            "public_dns": "ec2-3-70-125-207.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.125.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Main eip 2"
            },
            "tags_all": {
              "Name": "Main eip 2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.sg_allow_web",
            "aws_subnet.public",
            "data.aws_availability_zones.available",
            "tls_private_key.RSA",
            "aws_key_pair.generated_key",
            "aws_iam_role.s3_role",
            "aws_instance.webserver",
            "aws_security_group.sg_allow_ssh",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "aws_iam_instance_profile.ec3_profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07df274a488ca9195",
            "arn": "arn:aws:ec2:eu-central-1:638238370001:instance/i-0873f2ddb8aaa217d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec3_profile",
            "id": "i-0873f2ddb8aaa217d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-045f189828ceb472a",
            "private_dns": "ip-192-168-0-240.eu-central-1.compute.internal",
            "private_ip": "192.168.0.240",
            "public_dns": "ec2-3-70-84-236.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.84.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04622cd7194308c01",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097fdd2e9012b8c74",
            "tags": {
              "Name": "Web Server 1"
            },
            "tags_all": {
              "Name": "Web Server 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0081c8c57a7e6f259",
              "sg-0c942eca8d700bddb"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec3_profile",
            "aws_iam_role.s3_role",
            "aws_key_pair.generated_key",
            "aws_security_group.sg_allow_ssh",
            "aws_subnet.public",
            "aws_vpc.main",
            "tls_private_key.RSA",
            "aws_security_group.sg_allow_web",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07df274a488ca9195",
            "arn": "arn:aws:ec2:eu-central-1:638238370001:instance/i-0f54c72572370b527",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec3_profile",
            "id": "i-0f54c72572370b527",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01e8c00c67c981e5b",
            "private_dns": "ip-192-168-1-251.eu-central-1.compute.internal",
            "private_ip": "192.168.1.251",
            "public_dns": "ec2-3-70-125-207.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.125.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0339ecb4a8df809f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d9e4ca68ef0b86e",
            "tags": {
              "Name": "Web Server 2"
            },
            "tags_all": {
              "Name": "Web Server 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0081c8c57a7e6f259",
              "sg-0c942eca8d700bddb"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.sg_allow_ssh",
            "aws_security_group.sg_allow_web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.RSA",
            "aws_iam_instance_profile.ec3_profile",
            "aws_iam_role.s3_role"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:638238370001:internet-gateway/igw-0b8c2d23eaab6ad3a",
            "id": "igw-0b8c2d23eaab6ad3a",
            "owner_id": "638238370001",
            "tags": {
              "Name": "Main_gw"
            },
            "tags_all": {
              "Name": "Main_gw"
            },
            "vpc_id": "vpc-0dfe59b22bd4e6589"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "httplb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "kromelkylblogsbucket",
                "enabled": true,
                "prefix": "httplb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:loadbalancer/app/httplb/5d971bac72b184ca",
            "arn_suffix": "app/httplb/5d971bac72b184ca",
            "dns_name": "httplb-189305334.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:loadbalancer/app/httplb/5d971bac72b184ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "httplb",
            "security_groups": [
              "sg-0c942eca8d700bddb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d9e4ca68ef0b86e"
              },
              {
                "subnet_id": "subnet-097fdd2e9012b8c74"
              }
            ],
            "subnets": [
              "subnet-05d9e4ca68ef0b86e",
              "subnet-097fdd2e9012b8c74"
            ],
            "vpc_id": "vpc-0dfe59b22bd4e6589",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_s3_bucket.kromelkylblogsbucket",
            "aws_security_group.sg_allow_web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:listener/app/httplb/5d971bac72b184ca/d21b6f4fe2925997",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:targetgroup/webserver-tg/d9423293827fbca8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:listener/app/httplb/5d971bac72b184ca/d21b6f4fe2925997",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:loadbalancer/app/httplb/5d971bac72b184ca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.kromelkylblogsbucket",
            "aws_security_group.sg_allow_web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "aws_lb.httplb",
            "aws_lb_target_group.web_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "httptg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:targetgroup/httptg/a1563155cf73729b",
            "arn_suffix": "targetgroup/httptg/a1563155cf73729b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:targetgroup/httptg/a1563155cf73729b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "httptg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dfe59b22bd4e6589"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:targetgroup/webserver-tg/d9423293827fbca8",
            "arn_suffix": "targetgroup/webserver-tg/d9423293827fbca8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:targetgroup/webserver-tg/d9423293827fbca8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webserver-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dfe59b22bd4e6589"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webattach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:targetgroup/webserver-tg/d9423293827fbca8-20210929055929383600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:targetgroup/webserver-tg/d9423293827fbca8",
            "target_id": "i-0873f2ddb8aaa217d"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.RSA",
            "aws_iam_role.s3_role",
            "aws_instance.webserver",
            "aws_lb_target_group.web_tg",
            "aws_security_group.sg_allow_ssh",
            "aws_iam_instance_profile.ec3_profile",
            "aws_key_pair.generated_key",
            "aws_security_group.sg_allow_web",
            "data.aws_ami.latest_amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:targetgroup/webserver-tg/d9423293827fbca8-20210929055929431500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:638238370001:targetgroup/webserver-tg/d9423293827fbca8",
            "target_id": "i-0f54c72572370b527"
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_lb_target_group.web_tg",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.RSA",
            "aws_iam_instance_profile.ec3_profile",
            "aws_iam_role.s3_role",
            "aws_security_group.sg_allow_web",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_instance.webserver",
            "aws_security_group.sg_allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:638238370001:route-table/rtb-0502ac0eb8a4f184c",
            "id": "rtb-0502ac0eb8a4f184c",
            "owner_id": "638238370001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8c2d23eaab6ad3a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_rt"
            },
            "tags_all": {
              "Name": "main_rt"
            },
            "vpc_id": "vpc-0dfe59b22bd4e6589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03eebd7132ebe59a9",
            "route_table_id": "rtb-0502ac0eb8a4f184c",
            "subnet_id": "subnet-097fdd2e9012b8c74"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_internet_gateway.main_gw",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de3b33c188cdbda5",
            "route_table_id": "rtb-0502ac0eb8a4f184c",
            "subnet_id": "subnet-05d9e4ca68ef0b86e"
          },
          "dependencies": [
            "aws_internet_gateway.main_gw",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:638238370001:security-group/sg-0081c8c57a7e6f259",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Any output",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0081c8c57a7e6f259",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "638238370001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfe59b22bd4e6589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:638238370001:security-group/sg-0c942eca8d700bddb",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Any output",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c942eca8d700bddb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "638238370001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfe59b22bd4e6589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:638238370001:subnet/subnet-097fdd2e9012b8c74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-097fdd2e9012b8c74",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "638238370001",
            "tags": {
              "Name": "192.168.0.0/24"
            },
            "tags_all": {
              "Name": "192.168.0.0/24"
            },
            "vpc_id": "vpc-0dfe59b22bd4e6589"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:638238370001:subnet/subnet-05d9e4ca68ef0b86e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-05d9e4ca68ef0b86e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "638238370001",
            "tags": {
              "Name": "192.168.1.0/24"
            },
            "tags_all": {
              "Name": "192.168.1.0/24"
            },
            "vpc_id": "vpc-0dfe59b22bd4e6589"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:638238370001:vpc/vpc-0dfe59b22bd4e6589",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-023419e2d9e39f035",
            "default_route_table_id": "rtb-0d3b69694a5d78d5e",
            "default_security_group_id": "sg-0ddf6ee25b71e9dfe",
            "dhcp_options_id": "dopt-c6a8c7ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dfe59b22bd4e6589",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d3b69694a5d78d5e",
            "owner_id": "638238370001",
            "tags": {
              "Name": "mainvpc"
            },
            "tags_all": {
              "Name": "mainvpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}